# semanticsearch-mcp-server

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  server.py
tests/: README.md  __init__.py  test_all_tools.py  test_server.py  test_simple.py  test_stdio_complete.py  test_stdio_direct.py  test_stdio_tools.py
