[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticsearch-mcp-server"
version = "0.1.0"
description = "Semantic Scholar MCP Server with streaming HTTP support"
readme = "README.md"
license = "MIT"
authors = [
    { name = "MCP Server", email = "noreply@example.com" }
]
keywords = ["mcp", "semantic-scholar", "academic", "papers", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "python-dotenv>=1.1.1",
]

[project.scripts]
semantic-scholar-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/user/semanticsearch-mcp-server"
Repository = "https://github.com/user/semanticsearch-mcp-server"
Issues = "https://github.com/user/semanticsearch-mcp-server/issues"

[tool.setuptools]
py-modules = ["server", "config", "main"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.1",
]
